# higgs-cross-section

spurious_signal/failedss/cmake_example/source/: CMakeLists.txt
spurious_signal/failedss/cmake_example/source/Spurious_Signal/: CMakeLists.txt
spurious_signal/failedss/cmake_example/source/Spurious_Signal/Root/: LinkDef.h  RooTwoSidedCBShape.cxx
spurious_signal/failedss/cmake_example/source/Spurious_Signal/scripts/: .asetup.save  ML.txt  err1  err11  err13  err3  err5  err7  err9  original_sigPDF.txt  plotAll.C  plotMax.C  plotting.C  run_MC.sh  run_ML.sh  run_truth.sh  smooth.txt  spur_normal.sh  spur_smooth.sh  spuriousPlots.C  tables.txt  truth.txt  unsmooth.txt
spurious_signal/failedss/cmake_example/source/Spurious_Signal/scripts/.ipynb_checkpoints/: MC-checkpoint.txt  plotAll-checkpoint.C  plotting_nishank-checkpoint.C  spuriousPlots-checkpoint.C
spurious_signal/failedss/cmake_example/source/Spurious_Signal/scripts/MC_rootFiles/: MC_all_Bern3.root  MC_all_Bern4.root  MC_all_Bern5.root  MC_all_Dijet.root  MC_all_ExpPoly2.root  MC_all_ExpPoly3.root  MC_all_Exponential.root
spurious_signal/failedss/cmake_example/source/Spurious_Signal/scripts/ML_rootFiles/: ML_all_Bern3.root  ML_all_Bern4.root  ML_all_Bern5.root  ML_all_Dijet.root  ML_all_ExpPoly2.root  ML_all_ExpPoly3.root  ML_all_Exponential.root
spurious_signal/failedss/cmake_example/source/Spurious_Signal/scripts/norm_rootFiles/: norm_all_Bern3.root  norm_all_Bern4.root  norm_all_Bern5.root  norm_all_Dijet.root  norm_all_ExpPoly2.root  norm_all_ExpPoly3.root  (+1 more)
spurious_signal/failedss/cmake_example/source/Spurious_Signal/util/: Hyy_spurious.cxx  MLvMC.cxx  Smoothing.cxx  signal_modeling.cxx  testSmooth.cxx
(+96 files in other folders)
